# codex-search

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci-smoke.yml
config/: config.example.yaml
docs/: call-protocol.md  components-and-skills.md  configuration.md  explore.md  extract.md  mcp.md  migration-map.md  policy-architecture.md  research.md  search.md
docs/internal/: ci-smoke.md  compatibility-watchlist.md  phase1-validation.md  phase2-mineru-integration.md  phase3-github-explorer.md  phase4-key-pool-retry.md  phase5-brave-source.md  phase6-confidence-and-smoke.md  phase7-confidence-profile.md  phase8-ci-smoke-hook.md  testing.md
scripts/: check_api_config.py  ci_smoke_hook.sh  decision_trace_stats.py  install_skills.sh  masked_env_snapshot.py  refresh_egg_info.sh  skill_smoke_check.sh  smoke_phase6.sh
skills/: README.md
skills/api-availability/: SKILL.md
skills/content-extract/: SKILL.md
skills/git-workflow/: SKILL.md
skills/github-explorer/: SKILL.md
skills/mineru-extract/: SKILL.md
skills/search-layer/: SKILL.md
src/codex_search_stack/: cli.py  (+6 more)
tests/: test_config.py  test_contracts_request_id.py  test_decision_trace_integration.py  test_decision_trace_store.py  test_extract_pipeline.py  test_extract_policy_router.py  test_git_workflow_guardrails.py  test_github_explorer_orchestrator.py  test_key_pool.py  test_mcp_server.py  test_mineru_adapter.py  test_policy_router.py  test_research_orchestrator.py  test_scoring.py  test_search_orchestrator.py  test_search_sources.py  test_skill_wrappers.py  test_validators.py
(+31 files in other folders)
